--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 # Setup
 title:               Jekyll 
 tagline:             "Des ressources pour l'utilisation de Jekyll"
-description:         "J'ai très vite été séduit par Jekyll et c'est ici que je partage cette idyle..."
+description:         "J'ai très vite été séduit par Jekyll et c'est ici que je partage cette idylle..."
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://projetjekyll.github.io/" # the base hostname & protocol for your site
 paginate:            5
